# ml

./: .gitignore  README.md  pyproject.toml
app/flask-app-1/: pyproject.toml
app/flask-hellofruit/: Dockerfile  app.py  pyproject.toml  requirements-internal.txt
app/flask-hellofruit/docs/: README.md
app/flask-hellofruit/templates/: index.html
app/lib/helloworld/: pyproject.toml
app/lib/helloworld/tests/: test_helloworld.py
app/streamlit-posit-app/: .env.example  .gitignore  README.md  alembic.ini  app.py  manage_db.py  pyproject.toml  test_tasks.db
app/streamlit-posit-app/migrations/: env.py
app/streamlit-posit-app/rsconnect-python/: streamlit-posit-app.json
app/streamlit-posit-app/streamlit_posit_app/database/: database.py  model.py
app/streamlit-posit-app/streamlit_posit_app/pages/: __init__.py  home.py
app/streamlit-posit-app/tests/: conftest.py  test_database.py  test_model.py
devops/: README.md
devops/serve/placeholder/: Dockerfile  README.md  nginx.conf  status.json
docs/model/nfl/: README-build-containers.md  README-predict-service.md  README.md
eda/eda-project-1/: eda-project-1.py  pyproject.toml
eda/eda-project-2/: README.md  eda.ipynb  pyproject.toml
eda/eda-project-2/src/eda_project_2/: hello.py
eda/streamlit-posit-app/: README.md  app.py  pyproject.toml
eda/streamlit-posit-app/rsconnect-python/: streamlit-posit-app.json
eda/streamlit-posit-app/streamlit_posit_app/app/: main.py
eng/afl/fn-afl-teams/: README.md  deploy.sh  pyproject.toml  setup-notes.md
eng/afl/fn-afl-teams/src/: afl.yaml  main.py  requirements.txt
eng/afl/fn-afl-teams/tests/: test_fn-afl-teams.py
eng/misc/fn-misc-ipchecker/: README.md  deploy.sh  pyproject.toml  pytest.ini
eng/misc/fn-misc-ipchecker/src/: main.py  misc.yaml  requirements.txt
eng/misc/fn-misc-ipchecker/tests/: test_fn-misc-ipchecker.py
flask-app-1/: app.py
flask-app-1/flask-app-1/: Dockerfile  pyproject.toml
flask-app-1/flask-app-1/templates/: index.html
infra/tf/: .gitignore  apis.tf  backend.tf  bigquery.tf  buckets.tf  iam.tf  main.tf  variables.tf
infra/tf/gcp/environment/: README.md  apis.tf  artifacts.tf  bigquery.tf  buckets.tf  cloudrun.tf  iam.tf  outputs.tf  projects.tf  secrets.tf  service-accounts.tf
infra/tf/gcp/environment/bigquery-sql/: mdl.nfltouchdown_cloudrun.sql
infra/tf/gcp/environment/vars/: backend-dev.hcl
infra/tf/gcp/shared/: README.md  apis.tf  artifacts.tf  buckets.tf  projects.tf  variables.tf
infra/tf/gcp/shared/vars/: backend.hcl
lib/conman/: README.md  pyproject.toml
lib/conman/conman/: setenv.py
lib/fruitbowl/: README.md  pyproject.toml  pytest.ini
lib/fruitbowl/docs/: publish.md
lib/fruitbowl/fruitbowl/: fruit.py
lib/fruitbowl/tests/: test_fruit.py
lib/helloworld/helloworld/: helloworld.py
lib/helloworld/tests/: test_helloworld.py
lib/modelporter/: README.md  pyproject.toml
lib/modelporter/modelporter/: cli.py  cloudbuild.py  docker.py  serve.py  vertex.py
lib/modelporter/tests/: test_docker.py
lib/shellpers/: argon.sh
model/nfl/: README.md
model/nfl/touchdown/: .env.example  README.md  touchdown.yaml
model/nfl/touchdown/nfltouchdown/: .gcloudignore  README.md  cloudbuild.sh  cloudbuild.yaml  pyproject.toml  pytest.ini
model/nfl/touchdown/nfltouchdown/nfltouchdown/: io.py
model/nfl/touchdown/nfltouchdown/tests/: test_io.py
model/nfl/touchdown/nfltouchdownpredict/: Dockerfile  README.md  cloudbuild.sh  cloudbuild.yaml  docker-entrypoint.sh  predict.py  predict.yaml  pyproject.toml
model/nfl/touchdown/nfltouchdowntrain/: Dockerfile  README.md  cloudbuild.yaml  docker-entrypoint.sh  pyproject.toml  train.py  train.yaml
