[tool.poetry]
name = "myml"
version = "0.0.1"
description = ""
authors = ["Christopher Mortimer <christopher@mortimer.xyz>"]
readme = "README.md"
#packages = [{include = "flask-app-1"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
helloworld = { path = "./lib/helloworld/", develop = true }
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
