[project]
name = "streamlit-posit-app"
version = "0.1.0"
description = ""
authors = [
    { name = "Christopher Mortimer", email = "christopher@mortimer.xyz" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "rsconnect-python (>=1.25.2,<2.0.0)",
    "streamlit (>=1.44.1,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
