[tool.poetry]
name = "eda-project-1"
version = "0.0.1"
description = ""
authors = ["Christopher Mortimer <christopher@mortimer.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
helloworld = {path = "../../lib/helloworld", develop = true}
ipykernel = "^6.21.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
