[tool.poetry]
name = "fn-afl-teams"
version = "0.1.0"
description = ""
authors = ["Christopher Mortimer <christopher@mortimer.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
hydra-core = "^1.3.2"
google-cloud-bigquery = "^3.25.0"
beautifulsoup4 = "^4.12.3"
pyarrow = "^17.0.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest-env = "^1.1.3"
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
