[tool.poetry]
name = "nfltouchdown"
version = "0.1.6"
description = "NFL Touchdown modelling"
authors = ["Christopher Mortimer <christopher@mortimer.xyz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
google-cloud-bigquery = "^3.27.0"
google-cloud-storage = "^2.19.0"
db-dtypes = "^1.3.1"
google-cloud-bigquery-storage = "^2.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ipykernel = "^6.29.5"
pytest-env = "^1.1.5"

[[tool.poetry.source]]
name = "vpy"
url = "https://australia-southeast1-python.pkg.dev/prj-xyz-shr-rep-0/rpo-vpy-0/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
